--- a/ NFT_preview_card_component/styles.css
+++ b/ NFT_preview_card_component/styles.css
@@ -34,3 +34,123 @@ main {
     padding: 24px;
     width: 350px;
 }
+
+.hero  {
+    height: 302;
+    width: 302;
+    border-radius: 8px;
+}
+
+h1 {
+    box-sizing: border-box;
+    color: #fff; 
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    line-height: 28px;
+    margin: 0;
+    padding: 20px 0 0;
+}
+
+h1:hover {
+    color: #01ffff;
+}
+
+.text{
+    color: #8bacda;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: .5px;
+    line-height: 26px;
+    padding: 20px 0 0;
+    margin: 0;
+}
+
+.price_time {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 26px;
+    margin: 20px 0;
+}
+
+
+.price_info {
+    display: flex;
+    align-items: center;
+    width: 99px;
+    height: 18px;
+    color: #01ffff;
+}
+
+.price {
+    margin: 0;
+    margin-left: 4px;
+    font-size: 17px;
+}
+
+.time_info{
+    display: flex;
+    align-items: center;
+    width: 99px;
+    height: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.time {
+    margin: 0;
+    color: #8bacda;
+    font-size: 17px;
+    height: 26px;
+}
+
+.icon_time {
+    margin-right: 2px;
+}
+
+hr {
+    background-color: #2f415b;
+    border-style: none;
+    box-sizing: border-box;
+    color: #000;
+    height: 1px;
+    margin: 0;
+    padding: 0;
+}
+
+.author {
+    align-items: center;
+    box-sizing: border-box;
+    color: #000;
+    display: flex;
+    margin: 0;
+    padding: 20px 0 0;
+}
+
+.avatar {
+    background-image: url(images/image-avatar.png);
+    background-size: contain;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    box-sizing: border-box;
+    color: #000;
+    font-family: Outfit,sans-serif;
+    height: 30px;
+    margin: 0 8px 0 0;
+    padding: 0;
+    width: 30px;
+}
+
+.authortext {
+    color: #8bacda;
+    margin: 0;
+}
+
+span {
+    color: white;
+}
+
+span:hover {
+    color: #01ffff;
+}
